RESOLVED FIXED164646
RenderFlowThread's containing block cache should be invalidated before calling styleDidChange.
https://bugs.webkit.org/show_bug.cgi?id=164646
Summary RenderFlowThread's containing block cache should be invalidated before callin...
alan
Reported 2016-11-11 11:29:25 PST
So that ::styleDidChange can safely use RenderBlock::locateFlowThreadContainingBlock() with the new containing block context.
Attachments
Patch (6.52 KB, patch)
2016-11-11 11:43 PST, alan
no flags
Patch (6.52 KB, patch)
2016-11-11 12:46 PST, alan
no flags
alan
Comment 1 2016-11-11 11:43:35 PST
Simon Fraser (smfr)
Comment 2 2016-11-11 12:00:19 PST
Comment on attachment 294515 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294515&action=review > Source/WebCore/ChangeLog:12 > + Relying on existing tests. Maybe say "no known behavior change" > Source/WebCore/rendering/RenderElement.cpp:414 > + // Make sure we invalidate the containing block cache for flows when the contianing block context changes > + // so that styleDidChange can safely use RenderBlock::locateFlowThreadContainingBlock() > + if (is<RenderBlock>(*this) && oldStyle.position() != m_style.position()) > + downcast<RenderBlock>(*this).resetFlowThreadContainingBlockAndChildInfoIncludingDescendants(); I would prefer blank lines before and after to visually separate this "weird" code from the rest.
alan
Comment 3 2016-11-11 12:46:11 PST
WebKit Commit Bot
Comment 4 2016-11-11 13:23:07 PST
Comment on attachment 294520 [details] Patch Clearing flags on attachment: 294520 Committed r208605: <http://trac.webkit.org/changeset/208605>
WebKit Commit Bot
Comment 5 2016-11-11 13:23:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.